--- a/src/app/features/editor/widgets/providers/table/table-grid-selection/table-grid-selection-dialog.component.scss
+++ b/src/app/features/editor/widgets/providers/table/table-grid-selection/table-grid-selection-dialog.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 10000;
+  z-index: 999999 !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,7 +27,7 @@
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
   padding: 20px;
   min-width: 300px;
-  z-index: 10001;
+  z-index: 1000000 !important;
 }
 
 .table-grid-selection-dialog__header {
